--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 body{
-  @apply bg-black text-slate-100;
+  @apply bg-slate-950 text-slate-100;
+  overscroll-behavior: none;
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
